@@ -1,5 +1,6 @@
 - fix typo breaking reading fstab with UUID= entries
 - don't set $o->{security} until accepted (#33567)
+- packageCallbackChoices: use prefered packages given by perl-URPM 2.00 
 
 Version 10.4.195 - 14 September 2007, by Olivier "blino" Blin
 
